--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "s": "^1.0.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
